<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Stats Harvest</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="tab_title_stats">Stats</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="tab_title_data_entry">Data Entry</string>

    <!-- Category name for the GPS logger [CHAR LIMIT=20] -->
    <string name="tab_title_configure_gps_logger">GPS Config</string>

    <string name="menu_save_text">Save</string>
    <string name="menu_new_file_text">New</string>
    <string name="toolbar_file_name">test-file-name</string>
    <string name="menu_file_actions_title">File</string>

    <string name="menu_title_categorical_data">Categorical</string>
    <string name="menu_title_quantitative_data">Quantitative</string>
    <string name="gps_logging_enabled">GPS Logging Enabled</string>
    <string name="current_gps_coordinates">Current GPS Coordinates:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="sampling_rate">Sampling Rate</string>
    <string name="log_file_name">Log File Name</string>
    <string name="maximum_log_file_size">Maximum Log File Size</string>
    <string name="log_saving">Log Saving</string>
    <string name="rolling_log">Rolling Log</string>
    <string name="stop_when_full">Stop When Full</string>
    <string name="menu_file_open_title">Open</string>

</resources>
