<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- show file name -->
    <item
        android:id="@+id/file_name"
        android:title="@string/toolbar_file_name"
        app:showAsAction="always" />

    <group
        android:id="@+id/file_actions"
        android:title="@string/menu_file_actions_title"
        app:showAsAction="never">

        <item
            android:id="@+id/action_save"
            android:title="@string/menu_save_text"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_new"
            android:title="@string/menu_new_file_text"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/menu_data_type_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_categorical_data"
            android:title="@string/menu_title_categorical_data" />
        <item
            android:id="@+id/menu_quantitative_data"
            android:title="@string/menu_title_quantitative_data" />

    </group>


</menu>